feat: implement category select ui

--- a/index.html
+++ b/index.html
@@ -7,6 +7,13 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
+    <div class="contatiner">
+      <h1>Quote Generator</h1>
+
+      <label for="category">Select Category:</label>
+      <select id="category"></select>
+    </div>
+
     <script src="script.js"></script>
   </body>
 </html>
