feat: quote display box

--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
 
       <label for="category">Select Category:</label>
       <select id="category"></select>
+
+      <div id="quote-box" class="quote-box">Click Next to view a quote.</div>
+      
     </div>
 
     <script src="script.js"></script>
