feat: implemented navigation button ui

--- a/index.html
+++ b/index.html
@@ -14,7 +14,10 @@
       <select id="category"></select>
 
       <div id="quote-box" class="quote-box">Click Next to view a quote.</div>
-      
+
+      <button id="prev-quote">Previous</button>
+      <button id="next-quote">Next</button>
+      <button id="random-quote">Random</button>
     </div>
 
     <script src="script.js"></script>
