feat: implemented increase/decrease button ui

--- a/index.html
+++ b/index.html
@@ -18,6 +18,11 @@
       <button id="prev-quote">Previous</button>
       <button id="next-quote">Next</button>
       <button id="random-quote">Random</button>
+
+      <div>
+        <button id="increase-font">Increase Font</button>
+        <button id="decrease-font">Decrease Font</button>
+      </div>
     </div>
 
     <script src="script.js"></script>
