feat: implemented dark mode ui and check box ui

--- a/index.html
+++ b/index.html
@@ -23,6 +23,11 @@
         <button id="increase-font">Increase Font</button>
         <button id="decrease-font">Decrease Font</button>
       </div>
+
+      <div>
+        <label for="dark-mode-switch">Dark Mode:</label>
+        <input type="checkbox" id="dark-mode-switch" />
+      </div>
     </div>
 
     <script src="script.js"></script>
